--- a/Task-2-LandingPage/index.html
+++ b/Task-2-LandingPage/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orbit | Finish Projects 10x Faster</title>
+    <link rel="icon" type="image/svg+xml" 
+        href="data:image/svg+xml,
+        <svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%234f46e5' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'>
+            <circle cx='12' cy='12' r='3'/><circle cx='12' cy='12' r='8'/>
+            <path d='M10.3 21a9 9 0 0 1-1-17.4'/>
+            <path d='M14 3a9 9 0 0 1 1.7 17.6'/>
+        </svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -261,4 +268,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
