--- a/Task-3-Calculator/index.html
+++ b/Task-3-Calculator/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Material Pro Calculator</title>
+    <link rel="icon" type="image/svg+xml" 
+        href="data:image/svg+xml,
+        <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'>
+        <rect width='24' height='24' rx='4' fill='%234f46e5'/>
+        <text x='50%' y='55%' dominant-baseline='middle' text-anchor='middle' font-family='sans-serif' font-size='14' font-weight='bold' fill='white'>±</text>
+        </svg>">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -66,4 +72,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
