--- a/Task-1-Portfolio/index.html
+++ b/Task-1-Portfolio/index.html
@@ -659,19 +659,22 @@
             <div id="contact" class="relative">
                 <div class="absolute -top-10 -right-10 w-32 h-32 bg-indigo-500/10 rounded-full blur-3xl"></div>
                 <h2 class="text-3xl md:text-4xl font-extrabold mb-6">Let's Connect</h2>
-                <form id="contactForm" class="space-y-4">
+                <form action="https://formsubmit.co/aaiswaribm.learning@gmail.com" method="POST" id="contactForm" class="space-y-4">
                     <div class="space-y-4">
                         <div class="relative group">
                             <i data-lucide="user" class="absolute left-4 top-4 w-5 h-5 text-slate-400 group-focus-within:text-indigo-500 transition-colors"></i>
-                            <input type="text" id="name" required placeholder="Full Name" class="w-full pl-12 p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300">
+                            <input type="text" name="name" id="name" required placeholder="Full Name" class="w-full pl-12 p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300">
                         </div>
                         <div class="relative group">
                             <i data-lucide="mail" class="absolute left-4 top-4 w-5 h-5 text-slate-400 group-focus-within:text-indigo-500 transition-colors"></i>
-                            <input type="email" id="email" required placeholder="Email Address" class="w-full pl-12 p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300">
+                            <input type="email" name="email" id="email" required placeholder="Email Address" class="w-full pl-12 p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300">
                         </div>
                     </div>
-                    <textarea id="message" required placeholder="Tell me about your project..." rows="3" class="w-full p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300"></textarea>
-                    
+                    <textarea name="message" id="message" required placeholder="Tell me about your project..." rows="3" class="w-full p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300"></textarea>
+                    <input type="hidden" name="_subject" value="Portfolio Contact">
+                    <input type="hidden" name="_template" value="table">
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="text" name="_honey" style="display: none;">
                     <div id="formFeedback" class="hidden text-sm font-semibold text-emerald-600 dark:text-emerald-400 px-2 animate-bounce">
                         Message sent successfully! ✨
                     </div>
@@ -869,7 +872,7 @@
         const btnText = document.getElementById('btnText');
 
         contactForm.addEventListener('submit', (e) => {
-            e.preventDefault();
+            // e.preventDefault();
             btnText.innerText = "Sending...";
             
             setTimeout(() => {
