--- a/Task-1-Portfolio/index.html
+++ b/Task-1-Portfolio/index.html
@@ -674,7 +674,7 @@
                     <input type="hidden" name="_subject" value="Portfolio Contact Message">
                     <input type="hidden" name="_template" value="table">
                     <!-- Sends a copy to the sender and Auto-Reply -->
-                    <input type="hidden" name="_cc" value="{{Email}}">
+                    <input type="hidden" name="_replyto" value="{{Email}}">
                     <input type="hidden" name="_autoresponse" value="Thanks for reaching out! I've received your meassage and will reply soon.">
                     <!-- Anti-Spam -->
                     <input type="text" name="_honey" style="display: none;">
