--- a/Task-1-Portfolio/index.html
+++ b/Task-1-Portfolio/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aaiswarya | Full Stack Developer</title>
+    <link rel="icon" href="data:image/svg+xml,
+    <svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22>
+        <defs>
+            <linearGradient id=%22g%22 x1=%220%25%22 y1=%220%25%22 x2=%22100%22 y2=%22100%22>
+            <stop offset=%220%25%22 style=%22stop-color:%238b5cf6;stop-opacity:1%22 />
+            <stop offset=%22100%22 style=%22stop-color:%236366f1;stop-opacity:1%22 />
+        </linearGradient>   
+    </defs>
+    <rect width=%22100%22 height=%22100%22 rx=%2222%22 fill=%22url(%23g)%22/>
+    <text x=%2250%22 y=%2250%22 font-family=%22system-ui, sans-serif%22 font-weight=%22800%22 font-size=%2265%22 text-anchor=%22middle%22 dominant-baseline=%22central%22 fill=%22white%22>A</text>
+    </svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
@@ -264,7 +275,7 @@
                             <span class="font-bold text-indigo-600 dark:text-indigo-400 text-sm">10th</span>
                         </div>
                         <h4 class="font-bold dark:text-white text-sm">Secondary Education</h4>
-                        <p class="text-xs text-slate-500 dark:text-slate-400">AVP Matriculation Hr.Sec.School • 2021-22 • Score: 98%</p>
+                        <p class="text-xs text-slate-500 dark:text-slate-400">AVP Trust Matriculation Hr.Sec.School • 2021-22 • Score: 98%</p>
                     </div>
                     <div class="group">
                         <div class="w-12 h-12 bg-white dark:bg-slate-800 border-4 border-purple-500 rounded-full mx-auto mb-4 flex items-center justify-center group-hover:scale-110 transition-transform shadow-lg">
@@ -633,22 +644,24 @@
                 <h2 class="text-4xl font-extrabold mb-6">Career Profile</h2>
                 <p class="text-slate-600 dark:text-slate-300 mb-8 text-lg">Currently seeking internship opportunities and collaborative open-source projects to apply my full-stack expertise.</p>
                 <div class="space-y-4">
-                    <button class="/* Base Styles & Mobile Size */
-                                px-6 py-3 text-sm 
-                                /* Desktop Size (md breakpoint) */
-                                md:px-10 md:py-4 md:text-base 
-                                /* Colors & Shape */
-                                bg-gradient-to-r from-indigo-600 to-indigo-700 dark:from-indigo-500 dark:to-indigo-600 
-                                text-white rounded-2xl font-bold shadow-xl 
-                                /* Flexbox & Layout */
-                                flex items-center gap-2 md:gap-3 
-                                /* Animations & Hover */
-                                transition-all hover:bg-indigo-700 dark:hover:bg-indigo-400 
-                                hover:scale-105 active:scale-95 hover:shadow-indigo-500/20">
-                        
-                        <i data-lucide="download-cloud" class="w-4 h-4 md:w-5 md:h-5"></i>
-                        <span>Download Resume (PDF)</span>
-                    </button>
+                    <a href="/path-to-your-resume.pdf" download="Aaiswarya_PM_Resume.pdf">
+                        <button class="/* Base Styles & Mobile Size */
+                                    px-6 py-3 text-sm 
+                                    /* Desktop Size (md breakpoint) */
+                                    md:px-10 md:py-4 md:text-base 
+                                    /* Colors & Shape */
+                                    bg-gradient-to-r from-indigo-600 to-indigo-700 dark:from-indigo-500 dark:to-indigo-600 
+                                    text-white rounded-2xl font-bold shadow-xl 
+                                    /* Flexbox & Layout */
+                                    flex items-center gap-2 md:gap-3 
+                                    /* Animations & Hover */
+                                    transition-all hover:bg-indigo-700 dark:hover:bg-indigo-400 
+                                    hover:scale-105 active:scale-95 hover:shadow-indigo-500/20">
+                            
+                            <i data-lucide="download-cloud" class="w-4 h-4 md:w-5 md:h-5"></i>
+                            <span>Download Resume (PDF)</span>
+                        </button>
+                    </a>
                     <div class="flex items-center gap-3 text-slate-500 dark:text-slate-400 px-2">
                         <i data-lucide="check-circle-2" class="w-4 h-4 text-emerald-500"></i>
                         <span class="text-sm">Available for immediate hiring</span>
