--- a/Task-1-Portfolio/index.html
+++ b/Task-1-Portfolio/index.html
@@ -157,7 +157,22 @@
 
     <nav class="fixed top-6 left-1/2 -translate-x-1/2 z-50 w-11/12 max-w-5xl">
         <div class="glass-card px-6 md:px-8 py-4 flex justify-between items-center relative">
-            <div class="font-bold text-xl tracking-tight text-indigo-700 dark:text-indigo-400 underline decoration-indigo-200 underline-offset-4">Aaiswarya PM</div>
+            <div class="flex items-center gap-3 group cursor-pointer">  
+                <div class="relative flex items-center justify-center w-10 h-10 md:w-12 md:h-12 
+                            bg-gradient-to-br from-violet-500 to-indigo-600 
+                            rounded-xl shadow-lg shadow-indigo-500/30 
+                            transition-transform duration-300 group-hover:scale-110 group-hover:rotate-3">
+                <span class="text-white font-bold text-xl md:text-2xl font-sans tracking-tighter">
+                    A
+                </span>
+                <div class="absolute inset-0 bg-white/10 rounded-xl opacity-0 group-hover:opacity-100 transition-opacity"></div>
+                </div>
+                <span class="text-lg md:text-xl font-extrabold tracking-tight text-slate-800 dark:text-white">
+                Aaiswarya PM<span class="text-indigo-600 animate-pulse">.</span>
+                </span>
+            </div>
+            
+            <!-- <div class="font-bold text-xl tracking-tight text-indigo-700 dark:text-indigo-400 underline decoration-indigo-200 underline-offset-4">Aaiswarya PM</div> -->
             
             <div class="hidden md:flex gap-6 text-[10px] lg:text-xs font-semibold uppercase tracking-wider items-center relative">
                 <div id="nav-tracker" class="absolute h-8 bg-gradient-to-r from-indigo-500/10 to-purple-500/10 dark:from-indigo-500/20 dark:to-purple-500/20 rounded-full transition-all duration-300 ease-out -z-10 opacity-0"></div>
@@ -680,14 +695,14 @@
                         </div>
                         <div class="relative group">
                             <i data-lucide="mail" class="absolute left-4 top-4 w-5 h-5 text-slate-400 group-focus-within:text-indigo-500 transition-colors"></i>
-                            <input type="email" name="Email" id="email" required placeholder="Email Address" class="w-full pl-12 p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300">
+                            <input type="email" name="email" id="email" required placeholder="Email Address" class="w-full pl-12 p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300">
                         </div>
                     </div>
                     <textarea name="Message" id="message" required placeholder="Tell me about your project..." rows="3" class="w-full p-4 rounded-2xl bg-white/50 dark:bg-slate-800/50 border border-white/50 dark:border-slate-700 focus:ring-2 focus:ring-indigo-500 focus:bg-white dark:focus:bg-slate-800 outline-none transition-all duration-300"></textarea>
                     <input type="hidden" name="_subject" value="Portfolio Contact Message">
                     <input type="hidden" name="_template" value="table">
                     <!-- Sends a copy to the sender and Auto-Reply -->
-                    <input type="hidden" name="_replyto" value="{{Email}}">
+                    <input type="hidden" name="_replyto" value="{{email}}">
                     <input type="hidden" name="_autoresponse" value="Thanks for reaching out! I've received your meassage and will reply soon.">
                     <!-- Anti-Spam -->
                     <input type="text" name="_honey" style="display: none;">
