--- a/Task-1-Portfolio/index.html
+++ b/Task-1-Portfolio/index.html
@@ -530,9 +530,9 @@
         <div class="glass-card max-w-5xl w-full p-10 md:p-16 grid md:grid-cols-2 gap-16 items-center">
             <div id="resume-download">
                 <h2 class="text-4xl font-extrabold mb-6">Career Profile</h2>
-                <p class="text-slate-600 dark:text-slate-300 mb-8 text-lg">Currently seeking internship opportunities and collaborative open-source projects to apply my full-stack expertise.</p>
+                <p class="text-slate-600 dark:text-slate-300 mb-8 text-lg">Currently seeking internship opportunities and collaborative open-source projects to apply my Frontend expertise.</p>
                 <div class="space-y-4">
-                    <a href="/path-to-your-resume.pdf" download="Aaiswarya_PM_Resume.pdf">
+                    <a href="Aaiswarya_PM_MyResume.pdf" download="Aaiswarya_PM_Resume.pdf">
                         <button class="/* Base Styles & Mobile Size */
                                     px-6 py-3 text-sm 
                                     /* Desktop Size (md breakpoint) */
